--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     --cortitulo: #f6f6f6;
 }
 
-
 * {
     margin: 0;
     padding: 0;
@@ -16,7 +15,6 @@
 
 body {
     height: 100%;
-    
 }
 
 .cabecalho {
@@ -38,25 +36,25 @@ body {
     height: auto;
 }
 
-.container-input{
+.container-input {
     display: flex;
     justify-content: space-between;
     padding: 2% 0 0 4%;
 }
 
-.text-area{
+.text-area {
     width: 300px;
     height: 50px;
     position: absolute;
     left: 200px;
     top: 300px;
-
     padding: 10px;
     background: transparent;
     box-shadow: none;
     border: none;
     outline: 0;
-    color: var(--cortitulo)
+    color: var(--cortitulo);
+    resize: none;
 }
 
 .mensagem {
@@ -81,20 +79,7 @@ body {
     margin-top: 150px;
 }
 
-.btn-criptografar{  
-    font-size: medium;
-    border: 2px solid;
-    border-radius: 24px;
-    text-decoration: none;
-    background: #fdcd22;
-    color: #2c1374;
-    width: 200px;
-    height: 75px;
-    margin-left: 10%;
-    cursor: pointer;
-}
-
-.btn-descriptografar {
+.btn-criptografar, .btn-descriptografar {
     font-size: medium;
     border: 2px solid;
     border-radius: 24px;
@@ -111,38 +96,100 @@ body {
     color: #f6f6f6;
 }
 
-.btn-criptografar:hover,
-.btn-descriptografar:hover {
-  border: 2px solid var(--cortitulo);}
+.btn-criptografar:hover, .btn-descriptografar:hover {
+    border: 2px solid var(--cortitulo);
+}
 
-  .rodape{
+.rodape {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 2%;
-  }
+}
 
-  h2{
+h2 {
     color: var(--cortitulo);
     font-size: 18px;
-  }
+}
 
-  h3{
+h3 {
     color: var(--cortitulo);
-    font-size:10px;
-  }
+    font-size: 10px;
+}
 
-  .icons ion-icon {
+.icons {
+    display: flex;
+    gap: 10px;
+    margin: 10px 0;
+}
+
+.icons ion-icon {
     width: 18px;
     height: 18px;
     color: var(--corprincipal);
 }
 
 .icons ion-icon:hover {
-    color: var(--corprincipal)
+    color: var(--corprincipal);
 }
 
-a{
+a {
     color: var(--corprincipal);
     font-size: 18px;
+    text-decoration: none;
+}
+
+/* Adicionando Media Queries para Responsividade */
+@media (max-width: 768px) {
+    .cabecalho {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .cabecalho img {
+        max-width: 150px;
+        max-height: 150px;
+    }
+
+    .cabecalho h1 {
+        margin-left: 0;
+    }
+
+    .container-input {
+        flex-direction: column;
+        align-items: center;
+        padding: 2%;
+    }
+
+    .text-area {
+        position: relative;
+        left: auto;
+        top: auto;
+        width: 80%;
+        margin-top: 20px;
+    }
+
+    .mensagem {
+        float: none;
+        margin: 20px auto;
+        width: 80%;
+        height: auto;
+    }
+
+    .botoes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+    }
+
+    .btn-criptografar, .btn-descriptografar {
+        width: 80%;
+        height: 50px;
+        margin-bottom: 20px;
+    }
+
+    .icons {
+        justify-content: center;
+    }
 }
